[package]
name = "juniper_rocket_mongodb"
version = "0.2.0"
authors = ["Ethan Cheatham <ethanwcheatham@gmail.com>", "Mario Martinez <zenitram.oiram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.1"
juniper_rocket = "0.5.1"
rocket = "0.4.2"
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
mongodb = "0.9.2"
lazy_static = "1.4.0"
bson = "0.14.0"
